# nanoclip

./: README.md  pyproject.toml
scripts/: compare_nano_processor_with_transformers.py  compare_nano_with_transformers.py  infer_image_text.py
src/nanoclip/: __init__.py  config.py  model.py  processor.py
tests/: test_model.py
